devel
-----

* increase the recommended value for `/proc/sys/vm/max_map_count` to a value
  eight times as high as the previous recommended value. Increasing the 
  values helps to prevent an ArangoDB server from running out of memory mappings.


v3.2.4 (2017-XX-XX)
-------------------

* UI: added replicationFactor option during SmartGraph creation

* make the MMFiles compactor perform less writes during normal compaction
  operation

  This partially fixes issue #3144

* make the MMFiles compactor configurable

  The following options have been added:
  
  * `--compaction.db-sleep-time`: sleep interval between two compaction runs 
    (in s)
  * `--compaction.min-interval"`: minimum sleep time between two compaction 
     runs (in s)
  * `--compaction.min-small-data-file-size`: minimal filesize threshold 
    original datafiles have to be below for a compaction
  * `--compaction.dead-documents-threshold`: minimum unused count of documents 
    in a datafile
  * `--compaction.dead-size-threshold`: how many bytes of the source data file 
    are allowed to be unused at most
  * `--compaction.dead-size-percent-threshold`: how many percent of the source 
    datafile should be unused at least
  * `--compaction.max-files`: Maximum number of files to merge to one file
  * `--compaction.max-result-file-size`: how large may the compaction result 
    file become (in bytes)
  * `--compaction.max-file-size-factor`: how large the resulting file may 
    be in comparison to the collection's `--database.maximal-journal-size' setting`

* fix downwards-incompatibility in /_api/explain REST handler

* fix Windows implementation for fs.getTempPath() to also create a
  sub-directory as we do on linux

* fixed a multi-threading issue in cluster-internal communication

* performance improvements for traversals and edge lookups

* removed internal memory zone handling code. the memory zones were a leftover
  from the early ArangoDB days and did not provide any value in the current