@@ -96,6 +96,11 @@ class Scheduler {
   bool queue(std::unique_ptr<Job> job);
 
   uint64_t minimum() const { return _nrMinimum; }
+  inline uint64_t numQueued() const noexcept { return  _nrQueued; };
+  inline uint64_t getCounters() const noexcept { return _counters; }
+  static inline uint64_t numRunning(uint64_t value) noexcept { return value & 0xFFFFULL; }
+  static inline uint64_t numWorking(uint64_t value) noexcept { return (value >> 16) & 0xFFFFULL; }
+  static inline uint64_t numBlocked(uint64_t value) noexcept { return (value >> 32) & 0xFFFFULL; }
 
   std::string infoStatus();
 
@@ -134,9 +139,6 @@ class Scheduler {
   inline void blockThread() noexcept { _counters += 1ULL << 32; }
   inline void unblockThread() noexcept { _counters -= 1ULL << 32; }
 
-  inline uint64_t numRunning(uint64_t value) const noexcept { return value & 0xFFFFULL; }
-  inline uint64_t numWorking(uint64_t value) const noexcept { return (value >> 16) & 0xFFFFULL; }
-  inline uint64_t numBlocked(uint64_t value) const noexcept { return (value >> 32) & 0xFFFFULL; }
   inline bool isStopping(uint64_t value) const noexcept { return (value & (1ULL << 63)) != 0; }
 
   void startIoService();
